Fixes the responsive overflow which hides the dropdown near the bottom of the listing table, refs #9718

--- a/app/assets/stylesheets/sufia/_file-listing.scss
+++ b/app/assets/stylesheets/sufia/_file-listing.scss
@@ -2,6 +2,10 @@ h4 .small {
   color: $navbar-default-toggle-icon-bar-bg;
 }
 
+.table-responsive {
+  overflow-x: visible;
+}
+
 .table thead th {
   text-align: center;
 }
